<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custombg"
    tools:context=".presentation.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp">

        <ImageView
            android:id="@+id/homepageimage1"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/applogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/Homepagetexxt1"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintStart_toEndOf="@+id/homepageimage1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Homepagetextx2"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/homepageimage1"
            app:layout_constraintTop_toBottomOf="@+id/title1"
            app:layout_constraintEnd_toEndOf="@+id/title1" />

        <include
            android:id="@+id/taskcounter1"
            layout="@layout/card_task"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/subtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Incomplete Tasks Section -->
        <TextView
            android:id="@+id/incompletetasktext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/homepagelabeltask1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskcounter1" />

        <ImageView
            android:id="@+id/seallbutton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/whiteaye22"
            app:layout_constraintBottom_toBottomOf="@+id/incompletetasktext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.678"
            app:layout_constraintStart_toEndOf="@+id/incompletetasktext" />

        <TextView
            android:id="@+id/seebutton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="4dp"
            android:text="@string/view_all"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toEndOf="@+id/seallbutton"
            app:layout_constraintBottom_toBottomOf="@+id/incompletetasktext" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/incompleteTasksRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/incompletetasktext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/emptyIncompleteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/no_incomplete_tasks"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/incompletetasktext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Completed Tasks Section -->
        <TextView
            android:id="@+id/completetasktext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:paddingTop="16dp"
            android:text="@string/homepagelabeltask2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incompleteTasksRecyclerView" />

        <ImageView
            android:id="@+id/seallbutton2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/whiteaye22"
            app:layout_constraintBottom_toBottomOf="@+id/completetasktext1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.678"
            app:layout_constraintStart_toEndOf="@+id/completetasktext1" />

        <TextView
            android:id="@+id/viewallbutttontext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="4dp"
            android:text="@string/view_all"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toEndOf="@+id/seallbutton2"
            app:layout_constraintBottom_toBottomOf="@+id/completetasktext1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/completeTasksRecyclerView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/completetasktext1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/emptyCompleteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/no_completed_tasks"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/completetasktext1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>